Bug 1174580 - Doesn't display GB2312 encoded texts correctly for Chinese Characters. r=jcranmer

CLOSED TREE seamonkey